[resume-page] Feat: header에 이름, 연락처 등 개인정보 추가

--- a/#1 resume-page/index.html
+++ b/#1 resume-page/index.html
@@ -1,12 +1,25 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>이력서</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- 구름 Sans 웹 폰트를 여기에 연결 -->
+</head>
+<body>
     <header>
-
+        <div class="header-container">
+            <h1>구연우</h1>
+            <p>이메일: bluelayzxx@gmail.com</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/연우-구-b15102312/">linkedin.com/in/연우-구-b15102312</a></p>
+        </div>
     </header>
     <main>
-
+        <!-- 학력, 경력, 기술 스택, 포트폴리오 섹션 추가 예정 -->
     </main>
     <footer>
-        
+        <p>© 2024 nuyeo. 모든 권리 보유.</p>
     </footer>
+</body>
 </html>
