[resume-page] Feat: main에 학력 세션 추가
학교, 전공, 졸업연도 포함

--- a/#1 resume-page/index.html
+++ b/#1 resume-page/index.html
@@ -16,8 +16,14 @@
         </div>
     </header>
     <main>
-        <!-- 학력, 경력, 기술 스택, 포트폴리오 섹션 추가 예정 -->
-    </main>
+        <!-- 학력 섹션 -->
+        <section id="education">
+            <h2>학력</h2>
+            <ul>
+                <li><strong>가천대학교</strong> - 컴퓨터 공학과, 재학 (2025.02 졸업 예정)</li>
+            </ul>
+        </section>
+    </main>    
     <footer>
         <p>© 2024 nuyeo. 모든 권리 보유.</p>
     </footer>
