--- a/#1 resume-page/index.html
+++ b/#1 resume-page/index.html
@@ -23,6 +23,13 @@
                 <li><strong>가천대학교</strong> - 컴퓨터 공학과, 재학 (2025.02 졸업 예정)</li>
             </ul>
         </section>
+        <section id="career">
+            <h2>경력</h2>
+            <ul>
+                <li><strong>SNS LAB</strong> - 학부연구생 인턴십</li>
+                <li><strong>카카오테크 부트캠프</strong> - 풀스택 과정</li>
+            </ul>
+        </section>
     </main>    
     <footer>
         <p>© 2024 nuyeo. 모든 권리 보유.</p>
