[resume-page] Feat: 기술 스택 섹션 추가

--- a/#1 resume-page/index.html
+++ b/#1 resume-page/index.html
@@ -30,6 +30,16 @@
                 <li><strong>카카오테크 부트캠프</strong> - 풀스택 과정</li>
             </ul>
         </section>
+        <section id="skills">
+            <h2>기술 스택</h2>
+            <ul>
+                <li><strong>개발 언어</strong> - javascript, typescript, python, java</li>
+                <li><strong>백엔드</strong> - Node.js, Nest.js</li>
+                <li><strong>프론트엔드</strong> - React</li>
+                <li><strong>데이터베이스</strong> - MySQL, MariaDB, MongoDB</li>
+                <li><strong>etc</strong> - Docker, AWS, Git</li>
+            </ul>
+        </section>
     </main>    
     <footer>
         <p>© 2024 nuyeo. 모든 권리 보유.</p>
