[resume-page] Feat: add portfolio section

--- a/#1 resume-page/index.html
+++ b/#1 resume-page/index.html
@@ -23,6 +23,7 @@
                 <li><strong>가천대학교</strong> - 컴퓨터 공학과, 재학 (2025.02 졸업 예정)</li>
             </ul>
         </section>
+        <!-- 경력 섹션 -->
         <section id="career">
             <h2>경력</h2>
             <ul>
@@ -30,6 +31,7 @@
                 <li><strong>카카오테크 부트캠프</strong> - 풀스택 과정</li>
             </ul>
         </section>
+        <!-- 기술 스택 섹션 -->
         <section id="skills">
             <h2>기술 스택</h2>
             <ul>
@@ -40,6 +42,32 @@
                 <li><strong>etc</strong> - Docker, AWS, Git</li>
             </ul>
         </section>
+        <!-- 포트폴리오 섹션 -->
+         <section id="portfolio">
+            <h2>포트폴리오</h2>
+            <ul>
+                <li>
+                    <strong>쇼핑몰 웹페이지 제작</strong>
+                    <p>백엔드 프로그래밍 기초 실습을 위한 간단한 쇼핑몰 웹사이트 샘플 개발</p>
+                    <a href="https://github.com/nuyeo/webdbprogramming">웹DB 프로그래밍 쇼핑몰 GitHub</a>
+                </li>
+                <li>
+                    <strong>Nest.js 블로그</strong>
+                    <p>Nest.js로 만든 CURD 블로그 개발</p>
+                    <a href="https://github.com/nuyeo/NestJsBasic">NestJsBasic GitHub</a>
+                </li>
+                <li>
+                    <strong>주독야독</strong>
+                    <p>GPT-4 기반 AI 국어 독해 학습 도우미 앱 개발</p>
+                    <a href="https://github.com/JudokYadok/JudokYadok">주독야독 GitHub</a>
+                </li>
+                <li>
+                    <strong>스마트 화재 감지기</strong>
+                    <p>AIoT 스마트 화재 감지기 및 앱 개발</p>
+                    <a href="https://github.com/GCUpProject/P1">스마트 화재 감지기 GitHub</a>
+                </li>
+            </ul>
+         </section>
     </main>    
     <footer>
         <p>© 2024 nuyeo. 모든 권리 보유.</p>
