--- a/#1 resume-page/index.html
+++ b/#1 resume-page/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이력서</title>
     <link rel="stylesheet" href="style.css">
-    <!-- 구름 Sans 웹 폰트를 여기에 연결 -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
