[resume-page] Design: 레이아웃 조정

--- a/#1 resume-page/index.html
+++ b/#1 resume-page/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header-container">
-            <h1>구연우</h1>
+            <h1>nunu.gu(구연우)</h1>
             <p>이메일: bluelayzxx@gmail.com</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/연우-구-b15102312/">linkedin.com/in/연우-구-b15102312</a></p>
         </div>
